k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-Deployment
  namespace: smarthire
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: alpha1717/smarthire:frontend:v1
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: smarthire
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      NodePort: 31000
